<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.contactsmanager.MainActivity" >

    <Button
        android:id="@+id/show_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/show_fields" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" >
    </EditText>
  
  	<EditText
	    android:id="@+id/phone_number"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/phone_number"
	    android:inputType="phone" >
	 
	    <requestFocus />
	 
	</EditText>
  
	<EditText
	  android:id="@+id/email"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:ems="10"
	  android:hint="@string/email"
	  android:inputType="textEmailAddress" >
	
	  <requestFocus />
	
	</EditText>
  
	<EditText
	  android:id="@+id/address"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:ems="10"
	  android:hint="@string/address"
	  android:inputType="text" >
	
	  <requestFocus />
	
	</EditText>
	<LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<Button
	        android:id="@+id/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:text="@string/save"/>
		
		<Button
	        android:id="@+id/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:text="@string/cancel"/>
	</LinearLayout>
	
	<EditText
	  android:id="@+id/job"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:ems="10"
	  android:hint="@string/job"
	  android:inputType="text" >
	
	  <requestFocus />
	
	</EditText>
	<EditText
	  android:id="@+id/company"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:ems="10"
	  android:hint="@string/company"
	  android:inputType="text" >
	
	  <requestFocus />
	
	</EditText>
	<EditText
	  android:id="@+id/website"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:ems="10"
	  android:hint="@string/website"
	  android:inputType="text" >
	
	  <requestFocus />
	
	</EditText>
	<EditText
	  android:id="@+id/messenger"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:ems="10"
	  android:hint="@string/messenger"
	  android:inputType="text" >
	
	  <requestFocus />
	
	</EditText>
  
</LinearLayout>
